--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<form action="https://formspree.io/f/mpwoeeae" method="POST">
+<form action="https://corneautomatesimply.app.n8n.cloud/formspree.io/f/mpwoeeae/Order-Form" method="POST">
   <label>Name:</label>
   <input type="text" name="name" required><br>
 
@@ -17,3 +17,4 @@
 
   <button type="submit">Submit Order</button>
 </form>
+
