--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<form action="https://corneautomatesimply.app.n8n.cloud/formspree.io/f/mpwoeeae/Order-Form" method="POST">
+<form action="https://corneautomatesimply.app.n8n.cloud/webhook-test/Order-Form" method="POST">
   <label>Name:</label>
   <input type="text" name="name" required><br>
 
@@ -17,4 +17,5 @@
 
   <button type="submit">Submit Order</button>
 </form>
+
 
